add password token check in party
