# ras_party/views/account_view.py
@@ -51,6 +51,13 @@ def change_respondent_password():
     return make_response(jsonify(response), 200)
 
 
+@account_view.route("/respondents/reset_password", methods=["PUT"])
+def change_respondent_password_with_token():
+    payload = request.get_json() or {}
+    response = account_controller.reset_respondent_password(payload)
+    return make_response(jsonify(response), 200)
+
+
 @account_view.route("/respondents/request_password_change", methods=["POST"])
 def post_respondent_reset_password_by_email():
     payload = request.get_json() or {}
